--- a/pom.xml
+++ b/pom.xml
@@ -88,12 +88,11 @@
 
         <!-- Development tools -->
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.12</version>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>19.0.0</version>
             <scope>provided</scope>
         </dependency>
-
 
         <!-- Test dependencies -->
         <dependency>
