--- a/.gitignore
+++ b/.gitignore
@@ -239,6 +239,6 @@ gradle-app.setting
 
 # End of https://www.toptal.com/developers/gitignore/api/gradle
 
-## Loom
+### LoomDev ###
 /.idea
 loom-api.iml
