--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.loomdev</groupId>
     <artifactId>loom-api</artifactId>
-    <version>1.16.3-rc1</version>
+    <version>1.16.3</version>
     <packaging>jar</packaging>
 
     <name>Loom API</name>
@@ -36,7 +36,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <minecraft.version>1.16.3-rc1</minecraft.version>
+        <minecraft.version>1.16.3</minecraft.version>
     </properties>
 
     <repositories>
